--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
 </head>
-<body class="theme-white">
+<body class="">
 	<div class="loader">
 		<ul>
 			<li id="lado1"></li>
@@ -176,6 +176,33 @@
 										<span class="line2"></span>
 									</a>
 								</span>
+								<div class="content hidden">
+									<ul>
+										<li>Silver Data Analytics</li>
+										<li>Microsoft Partner</li>
+										<li>Asp.Net</li>
+										<li>WCF - Windows Communication Foundation</li>
+										<li>Web Services 2.0 (.asmx)</li>
+										<li>WPF - Windows Presentation Foundation</li>
+										<li>Console Applications</li>
+										<li>Windows Forms Application</li>
+										<li>REST Web Services</li>
+										<li>Intranet, Extranet and Interne</li>
+										<li>Share Point</li>
+										<li>Crystal reports,</li>
+										<li>Microsoft Reports</li>
+										<li>DevExpress</li>
+										<li>Telerik</li>
+										<li>XCeed &amp; Infragestics</li>
+										<li>ORM Tools - LLBGenpro</li>
+										<li>SSRS - SQL Server Reporting Services</li>
+										<li>SSAS, SQL Server Analysis Services</li>
+										<li>SSIS - SQL Server Integration Services</li>
+										<li>Biztalk</li>
+										<li>Mulesoft</li>
+										<li>Nunit, Pex</li>
+									</ul>									
+								</div>
 							</div>
 							<img src="images/section-techno1.jpg" alt="">
 						</div>
@@ -192,6 +219,14 @@
 										<span class="line2"></span>
 									</a>
 								</span>
+								<div class="content hidden">
+									<ul>
+										<li>Silver Data Analytics</li>
+										<li>Microsoft Partner</li>
+										<li>Asp.Net</li>
+										<li>WCF - Windows Communication Foundation</li>
+									</ul>									
+								</div>
 							</div>
 							<img src="images/section-techno2.jpg" alt="">
 						</div>
@@ -208,6 +243,12 @@
 										<span class="line2"></span>
 									</a>
 								</span>
+								<div class="content hidden">
+									<ul>
+										<li>Silver Data Analytics</li>
+										<li>Microsoft Partner</li>
+									</ul>									
+								</div>
 							</div>
 							<img src="images/section-techno3.jpg" alt="">
 						</div>
@@ -384,7 +425,7 @@
 				  </button>
 				</div>
 				<div class="modal-body">
-					<ul>
+					<!-- <ul>
 						<li>Silver Data Analytics</li>
 						<li>Microsoft Partner </li>
 						<li>Asp.Net</li>
@@ -408,7 +449,7 @@
 						<li>Biztalk</li>
 						<li>Mulesoft</li>
 						<li>Nunit, Pex</li>
-					</ul>
+					</ul> -->
 				</div>
 			  </div>
 			</div>
