--- a/src/pages/modules.html
+++ b/src/pages/modules.html
@@ -19,7 +19,7 @@
     />
     <title>Modulos</title>
   </head>
-  <body>
+  <body class="no-front">
     <div class="container-app">
       <header>
         <div class="logo">
@@ -64,8 +64,63 @@
           </button>
         </nav>
       </header>
-      <section class="module module-intro"></section>
-      <section class="module module-banner"></section>
+      <section class="module module-intro">
+        <div class="banner">
+          <div class="container-img">
+            <img src="images/banner2.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="container-text">
+            <div class="title">
+              <h2>DATA SERVICES</h2>
+            </div>
+            <div class="copy">
+              <p>We become your strategic partners.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-10 offset-1 col-md-6 offset-md-3 content-info">
+          <h3 class="subtitle">TECHNOLOGIES</h3>
+          <h2 class="title">
+            Application development in <span>multiple technologies.</span>
+          </h2>
+          <p class="text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            <br /><br />
+
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. <br /><br />
+
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum. Sed ut perspiciatis
+            unde omnis iste natus error sit voluptatem accusantium doloremque
+            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+            veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+            <br /><br />
+
+            Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+            fugit, sed quia consequuntur magni dolores eos qui ratione
+            voluptatem sequi nesciunt.
+          </p>
+        </div>
+      </section>
+      <section class="module module-banner">
+        <div class="banner">
+          <div class="container-img">
+            <img src="images/banner.jpg" alt="" class="img-fluid" />
+          </div>
+          <div class="container-text">
+            <div class="title">
+              <h2>DATA SERVICES</h2>
+            </div>
+            <div class="copy">
+              <p>We become your strategic partners.</p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="module module-video">
         <div class="container-image">
           <img src="images/fondo-video.jpg" class="img-fluid" alt="" />
