--- a/src/pages/modules.html
+++ b/src/pages/modules.html
@@ -19,7 +19,7 @@
     />
     <title>Modulos</title>
   </head>
-  <body class="no-front">
+  <body class="no-front theme-white">
     <div class="container-app">
       <header>
         <div class="logo">
